<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDE0F1"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:background="#5078AC" >

        <TextView
            android:id="@+id/activity_add_back_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:drawableLeft="@drawable/common_returnsign"
            android:gravity="center_vertical"
            android:text="@string/activity_add_strReturn"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/activity_add"
            android:textColor="#ffffff"
            android:textSize="22sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#D8EBFA"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#B6D1E6" />

        <EditText
            android:id="@+id/activity_add_key_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/activity_add_addString"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:inputType="text"
            android:textColor="#000000" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#B6D1E6" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

        <Button
            android:id="@+id/activity_add_findfriend_bt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:background="@drawable/activity_findbtn_bg"
            android:text="@string/activity_add_findfriends"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

        <Button
            android:id="@+id/activity_add_findgroup_bt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:background="@drawable/activity_findbtn_bg"
            android:text="@string/activity_add_findgroup"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#B6D1E6" />

        <RelativeLayout
            android:id="@+id/activity_add_create_group"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/common_presseddown_bg" >

            <ImageView
                android:id="@+id/activity_creat_img_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/empty"
                android:scaleType="centerInside"
                android:src="@drawable/activity_add_addgroup" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/activity_creat_img_iv"
                android:text="@string/activity_add_creategroup"
                android:textColor="#7296C8"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/empty"
                android:src="@drawable/turnto" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#B6D1E6" />
    <!-- 显示查找结果列表 -->

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    <ListView
        android:id="@+id/android_add_list_lv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.1"
        android:divider="@null" >
    </ListView>

</LinearLayout>