<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDE0F1"
    android:orientation="vertical" >

    <!-- 后退按钮 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#5078AC" >

        <TextView
            android:id="@+id/activity_friend_info_back_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:drawableLeft="@drawable/common_returnsign"
            android:gravity="center_vertical"
            android:text="@string/activity_friend_info_return"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/activity_friend_info_title"
            android:textColor="#ffffff"
            android:textSize="22sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    <!-- 个人头像、昵称、地址 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="#D8EBFA" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#B6D1E6" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <com.org.mwd.view.RoundImageView
                android:id="@+id/activity_friend_info_img_iv"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:contentDescription="@string/empty"
                android:scaleType="centerInside"
                android:src="@drawable/default_userphoto" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/activity_friend_info_img_iv"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/activity_friend_info_nick_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_friend_info_valnick"
                    android:textColor="#7296C8"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/activity_friend_info_gender_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_friend_info_valgender"
                        android:textColor="#525252"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/activity_friend_info_address_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/activity_friend_info_valaddress"
                        android:textColor="#525252"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#B6D1E6" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    <!-- 账号 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#D8EBFA" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#B6D1E6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/activity_friend_info_number"
            android:textColor="#525252"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:orientation="horizontal" >

            <View
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.3" />

            <TextView
                android:id="@+id/activity_friend_info_number_tv"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.7"
                android:gravity="center_vertical"
                android:text="@string/activity_friend_info_number"
                android:textColor="#7296C8"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#B6D1E6" />
    </RelativeLayout>

    <!-- 生日 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#D8EBFA" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/activity_friend_info_birth"
            android:textColor="#525252"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:orientation="horizontal" >

            <View
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.3" />

            <TextView
                android:id="@+id/activity_friend_info_birth_tv"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.7"
                android:gravity="center_vertical"
                android:text="@string/activity_friend_info_birth"
                android:textColor="#7296C8"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#B6D1E6" />
    </RelativeLayout>

    <!-- 邮箱 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#D8EBFA" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/activity_friendsinfo_email"
            android:textColor="#525252"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:orientation="horizontal" >

            <View
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.3" />

            <TextView
                android:id="@+id/activity_friend_info_email_tv"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.7"
                android:gravity="center_vertical"
                android:text="@string/activity_friend_info_valemail"
                android:textColor="#7296C8"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#B6D1E6" />
    </RelativeLayout>

    <!-- 个人描述 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="#D8EBFA" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/activity_friend_info_desc"
            android:textColor="#525252"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:orientation="horizontal" >

            <View
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.3" />

            <TextView
                android:id="@+id/activity_friend_info_desc_tv"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.7"
                android:gravity="center_vertical"
                android:hint="@string/activity_friend_info_hintdesc"
                android:textColor="#7296C8"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#B6D1E6" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    <!-- 定位 -->

    <RelativeLayout
        android:id="@+id/activity_friend_info_location_rl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#D8EBFA" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#B6D1E6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/activity_friend_info_location"
            android:textColor="#525252"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/activity_friend_info_location_iv"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/empty"
            android:scaleType="centerInside"
            android:src="@drawable/location" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#B6D1E6" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <LinearLayout
        android:id="@+id/activity_friend_info_add_friend_ll"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.025" />

        <Button
            android:id="@+id/activity_friend_info_add_friend_bt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.95"
            android:background="@drawable/activity_friend_info_add"
            android:text="@string/activity_friend_info_add_friend"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.025" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <LinearLayout
        android:id="@+id/activity_friend_info_delfriend_ll"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.025" />

        <Button
            android:id="@+id/activity_friend_info_delfriend_bt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.95"
            android:background="@drawable/fragment_setting_exitbtn"
            android:gravity="center"
            android:text="@string/activity_friend_info_del_friend"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.025" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3" />

</LinearLayout>